fixed alignment delete button

--- a/client/src/components/BeatList/BeatList.scss
+++ b/client/src/components/BeatList/BeatList.scss
@@ -1,30 +1,3 @@
-:root {
-  --border-radius: 5px;
-}
-
-.beat-row {
-  margin: 6px 0;
-  &:hover {
-    background-color: #202020;
-  }
-
-  &.playing {
-    background-color: #f0f0f0;
-  }
-
-  td {
-    &:first-child {
-      border-top-left-radius: var(--border-radius);
-      border-bottom-left-radius: var(--border-radius);
-    }
-
-    &:last-child {
-      border-top-right-radius: var(--border-radius);
-      border-bottom-right-radius: var(--border-radius);
-    }
-  }
-}
-
 .resizable-header {
   position: relative;
   cursor: col-resize; // Add this line
@@ -50,8 +23,4 @@
     transition: background-color 0.3s;
     opacity: 0;
   }
-}
-
-.beat-number {
-  text-align: center;
 }
